[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "=0.4.17"
bs58 = "=0.4.0"
redis = "=0.21.6"
anyhow = "=1.0.65"
chrono = "=0.4.22"
solana-sdk = "=1.10.35"
serde = { version = "=1.0.144", features = ["derive"] }

[dependencies.sqlx]
version = "=0.6.1"
default-features = false
features = [
  "uuid",
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-async-std-native-tls"
]
