[package]
name = "geyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "=0.21.6"
sqlx = { version = "=0.6.1", features = ["postgres", "runtime-async-std-native-tls"] }
postgres = "=0.19.4"
anyhow = "=1.0.64"
solana-geyser-plugin-interface = "=1.10.35"
