[package]
name = "geyser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
redis = "=0.21.6"
postgres = "=0.19.4"
anyhow = "=1.0.64"
solana-geyser-plugin-interface = "=1.10.35"

[depencies.sqlx]
version = "=0.6.1" 
features = ["postgres", "runtime-async-std-native-tls"] }
