[package]
name = "geyser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "=0.4.17"
toml = "0.5.9"
redis = "=0.21.6"
anyhow = "=1.0.64"
solana-sdk = "=1.10.35"
solana-geyser-plugin-interface = "=1.10.35"
serde = { version = "=1.0.144", features = ["derive"] }
